--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -1,6 +1,8 @@
 <div class="news">
   {% if site.news != blank %}
     {% assign news_size = site.news | size %}
+    {% assign news = site.news | reverse %}
+
     <div
       class="table-responsive"
       {% if include.limit and page.announcements.scrollable and news_size > 3 %}
@@ -8,12 +10,8 @@
       {% endif %}
     >
       <table class="table table-sm table-borderless">
-        {% assign news = site.news | reverse %}
-        {% if include.limit and page.announcements.limit %}
-          {% assign news_limit = page.announcements.limit %}
-        {% else %}
-          {% assign news_limit = news_size %}
-        {% endif %}
+        {% assign news_limit = page.announcements.limit | default: news_size %}
+
         {% for item in news limit: news_limit %}
           <tr>
             <th scope="row" style="width: 20%">{{ item.date | date: '%b %d, %Y' }}</th>
@@ -27,6 +25,26 @@
           </tr>
         {% endfor %}
       </table>
+
+      {% if news_size > news_limit %}
+        <details>
+          <summary style="cursor:pointer; margin-top:8px;">Old News (~{{ news.last.date | date: '%Y' }})</summary>
+          <table class="table table-sm table-borderless">
+            {% for item in news offset: news_limit %}
+              <tr>
+                <th scope="row" style="width: 20%">{{ item.date | date: '%b %d, %Y' }}</th>
+                <td>
+                  {% if item.inline %}
+                    {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
+                  {% else %}
+                    <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
+                  {% endif %}
+                </td>
+              </tr>
+            {% endfor %}
+          </table>
+        </details>
+      {% endif %}
     </div>
   {% else %}
     <p>No news so far...</p>
