--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -1,51 +1,68 @@
 <div class="news">
+  {% assign recent_news = false %}
+  {% assign two_months_ago = "now" | date: "%s" | minus: 5184000 %} <!-- 60 hari -->
+
   {% if site.news != blank %}
-    {% assign news_size = site.news | size %}
     {% assign news = site.news | reverse %}
+    {% assign news_size = news | size %}
+    {% assign news_limit = page.announcements.limit | default: 3 %}
 
-    <div
-      class="table-responsive"
-      {% if include.limit and page.announcements.scrollable and news_size > 3 %}
-        style="max-height: 60vw"
+    {% for item in news %}
+      {% assign item_date = item.date | date: "%s" %}
+      {% if item_date > two_months_ago %}
+        {% assign recent_news = true %}
       {% endif %}
-    >
-      <table class="table table-sm table-borderless">
-        {% assign news_limit = page.announcements.limit | default: news_size %}
+    {% endfor %}
 
-        {% for item in news limit: news_limit %}
-          <tr>
-            <th scope="row" style="width: 20%">{{ item.date | date: '%b %d, %Y' }}</th>
-            <td>
-              {% if item.inline %}
-                {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
-              {% else %}
-                <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
-              {% endif %}
-            </td>
-          </tr>
-        {% endfor %}
-      </table>
+    {% if recent_news == false %}
+      <p>No recent news in the last 2 months.</p>
+    {% else %}
+      <div
+        class="table-responsive"
+        {% if include.limit and page.announcements.scrollable and news_size > 3 %}
+          style="max-height: 60vw"
+        {% endif %}
+      >
+        <table class="table table-sm table-borderless">
+          {% for item in news limit: news_limit %}
+            <tr>
+              <th scope="row" style="width: 20%">{{ item.date | date: '%b %d, %Y' }}</th>
+              <td>
+                {% if item.inline %}
+                  {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
+                {% else %}
+                  <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
+                {% endif %}
+              </td>
+            </tr>
+          {% endfor %}
+        </table>
 
-      {% if news_size > news_limit %}
-        <details>
-          <summary style="cursor:pointer; margin-top:8px;">Old News (~{{ news.last.date | date: '%Y' }})</summary>
-          <table class="table table-sm table-borderless">
-            {% for item in news offset: news_limit %}
-              <tr>
-                <th scope="row" style="width: 20%">{{ item.date | date: '%b %d, %Y' }}</th>
-                <td>
-                  {% if item.inline %}
-                    {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
-                  {% else %}
-                    <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
-                  {% endif %}
-                </td>
-              </tr>
-            {% endfor %}
-          </table>
-        </details>
-      {% endif %}
-    </div>
+        {% if news_size > news_limit %}
+          <details style="margin-top: 12px;">
+            <summary style="cursor:pointer; font-weight: 600; color: #555;">
+              Old News (~{{ news.last.date | date: '%Y' }})
+            </summary>
+            <div style="margin-top: 6px;">
+              <table class="table table-sm table-borderless">
+                {% for item in news offset: news_limit %}
+                  <tr>
+                    <th scope="row" style="width: 20%">{{ item.date | date: '%b %d, %Y' }}</th>
+                    <td>
+                      {% if item.inline %}
+                        {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
+                      {% else %}
+                        <a class="news-title" href="{{ item.url | relative_url }}">{{ item.title }}</a>
+                      {% endif %}
+                    </td>
+                  </tr>
+                {% endfor %}
+              </table>
+            </div>
+          </details>
+        {% endif %}
+      </div>
+    {% endif %}
   {% else %}
     <p>No news so far...</p>
   {% endif %}
